<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <PreferenceCategory android:title="Report Bug"
            android:key="Report Bug"
            app:iconSpaceReserved="false">

            <Preference android:title="Fill a google form"
                android:key="report_bug"
                app:iconSpaceReserved="false"
                android:summary="@string/report_bug_summary"></Preference>

        </PreferenceCategory>

    <PreferenceCategory
        android:key="logout_category"
        android:title="Logout"
        app:iconSpaceReserved="false">

        <Preference
            android:key="logout"
            android:summary="@string/logout_summary"
            android:title="Logout"
            app:iconSpaceReserved="false"
            app:allowDividerBelow="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="contact_us_category"
        android:title="Contact Us"
        app:allowDividerBelow="true"
        android:singleLineTitle="true"
        app:iconSpaceReserved="false">

        <Preference android:title="Privacy Policy"
            android:key="privacy_policy"
            app:iconSpaceReserved="false"
            android:summary="@string/privacy_policy_summary"></Preference>


        <Preference android:title="Reach Mailer Daemon at"
            android:singleLineTitle="true"
            android:key="reach_sites"
            app:iconSpaceReserved="false"
            app:allowDividerBelow="true"></Preference>

    </PreferenceCategory>


</PreferenceScreen>